error.phtml Changed 'Could not persist dashboard' to 'Could not save dashboard'
refs #10307

--- a/application/locale/de_DE/LC_MESSAGES/icinga.po
+++ b/application/locale/de_DE/LC_MESSAGES/icinga.po
@@ -542,7 +542,7 @@ msgstr ""
 "legen Sie als Erstes eine Ressource für die Authentifizierung an."
 
 #: /vagrant/application/views/scripts/dashboard/error.phtml:2
-msgid "Could not persist dashboard"
+msgid "Could not save dashboard"
 msgstr "Konnte Dashboard nicht speichern"
 
 #: /vagrant/application/forms/Config/User/CreateMembershipForm.php:89
