--- a/application/locale/fi_FI/LC_MESSAGES/icinga.po
+++ b/application/locale/fi_FI/LC_MESSAGES/icinga.po
@@ -244,7 +244,7 @@ msgid "Could not find any resources for authentication"
 msgstr "Yhtään tunnistautumisresurssia ei löytynyt"
 
 #: /usr/share/icingaweb2/application/views/scripts/dashboard/error.phtml:2
-msgid "Could not persist dashboard"
+msgid "Could not save dashboard"
 msgstr "Kojelauta ei pysy"
 
 #: /usr/share/icingaweb2/application/controllers/AuthenticationController.php:62
