--- a/application/locale/pt_BR/LC_MESSAGES/icinga.po
+++ b/application/locale/pt_BR/LC_MESSAGES/icinga.po
@@ -268,7 +268,7 @@ msgid "Could not find any resources for authentication"
 msgstr "Não foi possível encontrar os recursos para autenticação"
 
 #: /usr/local/icingaweb/application/views/scripts/dashboard/error.phtml:2
-msgid "Could not persist dashboard"
+msgid "Could not save dashboard"
 msgstr "Não foi possível salvar o dashboard"
 
 #: /usr/local/icingaweb/application/controllers/AuthenticationController.php:60
