--- a/application/locale/fi_FI/LC_MESSAGES/icinga.po
+++ b/application/locale/fi_FI/LC_MESSAGES/icinga.po
@@ -395,7 +395,7 @@ msgstr "Ruudun otsikko"
 
 #: /usr/share/icingaweb2/application/forms/Dashboard/DashletForm.php:70
 msgid ""
-"Enter url being loaded in the dashlet. You can paste the full URL, including filters."
+"Enter url to be loaded in the dashlet. You can paste the full URL, including filters."
 msgstr "Anna url, jonka haluat ladattavan dashletiin. Voit käyttää copy-pastea."
 
 #: /usr/share/icingaweb2/application/forms/Config/General/LoggingConfigForm.php:51
