--- a/application/locale/it_IT/LC_MESSAGES/icinga.po
+++ b/application/locale/it_IT/LC_MESSAGES/icinga.po
@@ -833,7 +833,7 @@ msgstr "Inserici un titolo per la nuova dashboard"
 
 #: /usr/share/icingaweb2/application/forms/Dashboard/DashletForm.php:70
 msgid ""
-"Enter url being loaded in the dashlet. You can paste the full URL, including "
+"Enter url to be loaded in the dashlet. You can paste the full URL, including "
 "filters."
 msgstr ""
 "Inserire l'indirizzo della vista. Incollare l'intera URL, filtri inclusi."
