--- a/application/locale/pt_BR/LC_MESSAGES/icinga.po
+++ b/application/locale/pt_BR/LC_MESSAGES/icinga.po
@@ -440,7 +440,7 @@ msgstr "Entre com o título para o novo painel."
 #: /usr/local/icingaweb/application/forms/Dashboard/ComponentForm.php:70
 #: /usr/local/icingaweb/application/forms/Dashboard/DashletForm.php:71
 msgid ""
-"Enter url being loaded in the dashlet. You can paste the full URL, including "
+"Enter url to be loaded in the dashlet. You can paste the full URL, including "
 "filters."
 msgstr ""
 "Digite url a ser carregada no dashlet. Você pode colar a URL completa, "
