--- a/application/locale/ru_RU/LC_MESSAGES/icinga.po
+++ b/application/locale/ru_RU/LC_MESSAGES/icinga.po
@@ -810,7 +810,7 @@ msgstr ""
 
 #: /vagrant/application/forms/Dashboard/DashletForm.php:70
 msgid ""
-"Enter url being loaded in the dashlet. You can paste the full URL, including "
+"Enter url to be loaded in the dashlet. You can paste the full URL, including "
 "filters."
 msgstr ""
 "Введите URL компонента. Вы можете скопировать полный URL, включая фильтры."
