--- a/modules/monitoring/application/locale/de_DE/LC_MESSAGES/monitoring.po
+++ b/modules/monitoring/application/locale/de_DE/LC_MESSAGES/monitoring.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Monitoring Module (2.1.2)\n"
 "Report-Msgid-Bugs-To: dev@icinga.org\n"
 "POT-Creation-Date: 2016-02-29 14:40+0000\n"
-"PO-Revision-Date: 2016-03-30 13:12+0200\n"
+"PO-Revision-Date: 2016-12-08 10:45+0100\n"
 "Last-Translator: Thomas Gelf <thomas@gelf.net>\n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Language-Team: \n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 1.8.11\n"
 
 #: /vagrant/modules/monitoring/application/controllers/ChartController.php:375
 msgid " Down Hosts (Handled)"
@@ -2027,7 +2027,7 @@ msgstr "Letzter Check"
 
 #: /vagrant/modules/monitoring/application/views/scripts/show/components/checkstatistics.phtml:7
 msgid "Last update"
-msgstr "Letze Aktualisierung"
+msgstr "Letzte Aktualisierung"
 
 #: /vagrant/modules/monitoring/configuration.php:290
 msgid "Late Host Check Results"
